# docsense

./: README.md  docker-compose-prod.yml  docker-compose.yaml  docker-compose.yml  docsense.dump  docsense.sql  gog.py  main.py  note.md  pyproject.toml  temp.py  test_qa.py
.github/workflows/: ci.yml  publish.yml
alembic/: env.py
alembic/versions/: 1d45d147e776_question_log_update.py  2e91279b89b9_chunk_embedding_added.py  35808f6e57f8_question_log_added.py  6f20d8666e2e_created_at_evalmod.py  9f8c1a18d7be_chunk_entity_added.py
app/api/: document_routes.py  eval_router.py  test_routes.py
app/core/: config.py
app/models/: __init__.py  chunk_model.py  document.py  document_model.py  eval_result_model.py  question_log_model.py
app/processors/: pdf_processor.py  processor_factory.py
app/ragas/: service.py
app/repositories/: analytics_repo.py  document_page_repo.py  document_repo.py  eval_dataset_repo.py  eval_result_repo.py  question_log_repo.py
app/schemas/: eval_schema.py  question.py
app/services/: bm25_service.py  chunk_service.py  document_service.py  embedding_service.py  eval_runner_service.py  eval_service.py  generation_service.py  llm_service.py  question_answer_service.py  retrieval_service.py  tenant_service.py  tfidf_service.py
backend/: .dockerignore  alembic.ini  dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/docs/: api-overview.md  architecture.md  deployment.md  (+1 more)
frontend/: Dockerfile  ask.html  dashboard.html  evaluation.html  history.html  sidebar.html  tenants.html  upload.html
tests/: retrieval_eval.py
(+47 files in other folders)
