[project]
name = "docsense"
version = "0.1.0"
description = "A RAG System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "fitz>=0.0.1.dev2",
    "genai>=2.1.0",
    "google-genai>=2.8.0",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
]
